WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130522
A completed fill-forwards animation should not disable overlap testing
https://bugs.webkit.org/show_bug.cgi?id=130522
Summary
A completed fill-forwards animation should not disable overlap testing
Simon Fraser (smfr)
Reported
2014-03-20 11:16:24 PDT
A completed fill-forwards animation should not disable overlap testing
Attachments
Patch
(25.09 KB, patch)
2014-03-20 11:27 PDT
,
Simon Fraser (smfr)
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-03-20 11:25:02 PDT
<
rdar://problem/15862395
>
Simon Fraser (smfr)
Comment 2
2014-03-20 11:27:05 PDT
Created
attachment 227307
[details]
Patch
WebKit Commit Bot
Comment 3
2014-03-20 11:28:53 PDT
Attachment 227307
[details]
did not pass style-queue: ERROR: Source/WebCore/rendering/RenderLayerBacking.cpp:677: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 1 in 16 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 4
2014-03-20 11:32:50 PDT
https://trac.webkit.org/r165977
Simon Fraser (smfr)
Comment 5
2014-03-20 11:36:20 PDT
And
http://trac.webkit.org/changeset/165978
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug