A completed fill-forwards animation should not disable overlap testing https://bugs.webkit.org/show_bug.cgi?id=130522 <rdar://problem/15862395>

Source/WebCore:

Reviewed by Dean Jackson.

Previously, if -webkit-transform was being keyframe-animated, and the
animation had fill-forwards, then we would continue to think that the
animation is running and turn off compositing overlap testing. This
caused some sites to keep too much backing store around.

Fix by having isRunning{Accelerated}AnimationOnRenderer take some flags
so that more specific questions about the running state can be asked.
For layer creation, keep using the same criteria as before (for now)
which includes paused and fill-forwards animations. For overlap testing,
don't include the fill-forwards test.

Tests: compositing/animation/filling-animation-overlap-at-end.html
       compositing/animation/filling-animation-overlap.html
       compositing/animation/layer-for-filling-animation.html

* page/animation/AnimationBase.h:
(WebCore::AnimationBase::fillingForwards):
(WebCore::AnimationBase::inPausedState):
(WebCore::AnimationBase::isAnimatingProperty):
* page/animation/AnimationController.cpp:
(WebCore::AnimationControllerPrivate::isRunningAnimationOnRenderer):
(WebCore::AnimationControllerPrivate::isRunningAcceleratedAnimationOnRenderer):
(WebCore::AnimationController::isRunningAnimationOnRenderer):
(WebCore::AnimationController::isRunningAcceleratedAnimationOnRenderer):
* page/animation/AnimationController.h:
* page/animation/AnimationControllerPrivate.h:
* page/animation/CompositeAnimation.cpp:
(WebCore::CompositeAnimation::isAnimatingProperty):
* page/animation/CompositeAnimation.h:
* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateGraphicsLayerGeometry):
* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::requiresCompositingForAnimation):
(WebCore::RenderLayerCompositor::isRunningAcceleratedTransformAnimation):

LayoutTests:

Reviewed by Dean Jackson.

Tests that dump layer trees when a fill-forwards animation has finished,
both when the final keyframe causes overlap, and when it does not.

* compositing/animation/filling-animation-overlap-at-end-expected.txt: Added.
* compositing/animation/filling-animation-overlap-at-end.html: Added.
* compositing/animation/filling-animation-overlap-expected.txt: Added.
* compositing/animation/filling-animation-overlap.html: Added.
* compositing/animation/layer-for-filling-animation-expected.txt: Added.
* compositing/animation/layer-for-filling-animation.html: Added.

Canonical link: https://commits.webkit.org/148520@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165977 268f45cc-cd09-0410-ab3c-d52691b4dbfc