Source/WebCore/page/animation/AnimationBase.h
@@ -122,9 +122,11 @@ public:
     }
 
     bool postActive() const { return m_animState == AnimationStateDone; }
+    bool fillingForwards() const { return m_animState == AnimationStateFillingForwards; }
     bool active() const { return !postActive() && !preActive(); }
     bool running() const { return !isNew() && !postActive(); }
     bool paused() const { return m_pauseTime >= 0 || m_animState == AnimationStatePausedNew; }
+    bool inPausedState() const { return m_animState >= AnimationStatePausedNew && m_animState <= AnimationStatePausedRun; }
     bool isNew() const { return m_animState == AnimationStateNew || m_animState == AnimationStatePausedNew; }
     bool waitingForStartTime() const { return m_animState == AnimationStateStartWaitResponse; }
     bool waitingForStyleAvailable() const { return m_animState == AnimationStateStartWaitStyleAvailable; }
@@ -153,15 +155,34 @@ public:
     // Does this animation/transition involve the given property?
     virtual bool affectsProperty(CSSPropertyID /*property*/) const { return false; }
 
-    bool isAnimatingProperty(CSSPropertyID property, bool acceleratedOnly, bool isRunningNow) const
+    enum RunningStates {
+        Delaying = 1 << 0,
+        Paused = 1 << 1,
+        Running = 1 << 2,
+        FillingFowards = 1 << 3
+    };
+    typedef unsigned RunningState;
+    bool isAnimatingProperty(CSSPropertyID property, bool acceleratedOnly, RunningState runningState) const
     {
         if (acceleratedOnly && !m_isAccelerated)
             return false;
-            
-        if (isRunningNow)
-            return (!waitingToStart() && !postActive()) && affectsProperty(property);
 
-        return !postActive() && affectsProperty(property);
+        if (!affectsProperty(property))
+            return false;
+
+        if ((runningState & Delaying) && preActive())
+            return true;
+
+        if ((runningState & Paused) && inPausedState())
+            return true;
+
+        if ((runningState & Running) && !inPausedState() && (m_animState >= AnimationStateStartWaitStyleAvailable && m_animState <= AnimationStateDone))
+            return true;
+
+        if ((runningState & FillingFowards) && m_animState == AnimationStateFillingForwards)
+            return true;
+
+        return false;
     }
 
     // FIXME: rename this using the "lists match" terminology.
